test/TestSuite/Scheduler/Errors/alap_booking.tjp
project test "Test" "1.0" 2008-02-03 +2m

resource tux "Tux"

# MARK: error 6 alap_booking
task foo "Foo" {
  end ${projectend}
  effort 10d
  allocate tux
  booking tux 2008-02-05-10:00 +2h
}
